<resources>
    <string name="app_name">Grimoire</string>
    <string name="web_client_id">test</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_here_to_login">Already have an account? Go to login!</string>
    <string name="click_here_to_register">No account? Click here to register!</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_the_grimoire">Welcome to the Grimoire</string>
    <string name="navigation_destinations">Navigation Destinations</string>
    <string name="select_from_this_menu">Select from this menu.</string>
    <string name="home">Home</string>
    <string name="characters">Characters</string>
    <string name="campaigns">Campaigns</string>
    <string name="worldbuilding">Worldbuilding</string>
    <string name="community">Community</string>
    <string name="tools">Tools</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="user_profile">User Profile</string>
    <string name="user_name">User Name</string>
    <string name="first_name">First Name</string>
    <string name="surname">Surname</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="edit_data">Edit Data</string>
    <string name="reset_changes">Reset Changes</string>
    <string name="save_changes">Save Changes</string>
    <string name="cancel">Cancel</string>
    <string name="close_edit_mode">Close Edit Mode</string>
    <string name="refresh_view">Refresh View</string>
    <string name="toolbox">Toolbox</string>
    <string name="_20">20</string>
</resources>