<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:gravity="bottom"
    tools:context=".Splash">

    <TextView
        android:id="@+id/splash_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"

        android:text="@string/welcome_to_the_grimoire"
        android:textSize="40sp"
        android:textStyle="bold"

        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/date_text"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/splash_title"
        tools:layout_editor_absoluteX="15dp" />


    <Button
        android:id="@+id/splash_log_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        app:layout_constraintEnd_toStartOf="@+id/splash_reg_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_text" />

    <Button
        android:id="@+id/splash_reg_button"
        android:layout_width="120dp"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/splash_log_button"
        app:layout_constraintTop_toBottomOf="@+id/date_text" />





</androidx.constraintlayout.widget.ConstraintLayout>